WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191432
[Payment Request] canMakePayment() should not consider serialized payment method data
https://bugs.webkit.org/show_bug.cgi?id=191432
Summary
[Payment Request] canMakePayment() should not consider serialized payment met...
Andy Estes
Reported
2018-11-08 12:28:34 PST
[Payment Request] canMakePayment() should not consider serialized payment method data
Attachments
Patch
(18.21 KB, patch)
2018-11-08 12:34 PST
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(18.23 KB, patch)
2018-11-08 13:48 PST
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2018-11-08 12:34:23 PST
Comment hidden (obsolete)
Created
attachment 354263
[details]
Patch
Andy Estes
Comment 2
2018-11-08 13:48:41 PST
Created
attachment 354269
[details]
Patch
Dean Jackson
Comment 3
2018-11-09 10:17:39 PST
Comment on
attachment 354269
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=354269&action=review
> LayoutTests/imported/w3c/ChangeLog:8 > + * web-platform-tests/payment-request/payment-request-canmakepayment-method.https-expected.txt: Added.
Looks like more than this was changed.
Andy Estes
Comment 4
2018-11-09 10:20:20 PST
Comment on
attachment 354269
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=354269&action=review
>> LayoutTests/imported/w3c/ChangeLog:8 >> + * web-platform-tests/payment-request/payment-request-canmakepayment-method.https-expected.txt: Added. > > Looks like more than this was changed.
Yes, will fix. Thanks for reviewing!
Andy Estes
Comment 5
2018-11-09 10:22:35 PST
Comment on
attachment 354269
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=354269&action=review
>>> LayoutTests/imported/w3c/ChangeLog:8 >>> + * web-platform-tests/payment-request/payment-request-canmakepayment-method.https-expected.txt: Added. >> >> Looks like more than this was changed. > > Yes, will fix. > > Thanks for reviewing!
Actually no, this is all that's changed in LayoutTests/imported/w3c. The other changes are in LayoutTests/ChangeLog.
WebKit Commit Bot
Comment 6
2018-11-09 10:27:44 PST
Comment on
attachment 354269
[details]
Patch Clearing flags on attachment: 354269 Committed
r238042
: <
https://trac.webkit.org/changeset/238042
>
WebKit Commit Bot
Comment 7
2018-11-09 10:27:46 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2018-11-09 10:28:24 PST
<
rdar://problem/45948093
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug