[Payment Request] canMakePayment() should not consider serialized payment method data https://bugs.webkit.org/show_bug.cgi?id=191432

Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

* web-platform-tests/payment-request/payment-request-canmakepayment-method.https-expected.txt: Added.

Source/WebCore:

In https://github.com/w3c/payment-request/pull/806, we're changing the specification of
canMakePayment() to not consider serialized payment method data when deciding if a payment
method is supported. For Apple Pay, this means we resolve to true for
"https://apple.com/apple-pay", even if an ApplePayRequest is omitted or is missing required
fields.

Added test cases to
http/tests/paymentrequest/payment-request-canmakepayment-method.https.html and
http/tests/paymentrequest/payment-request-show-method.https.html.

* Modules/paymentrequest/PaymentRequest.cpp:
(WebCore::PaymentRequest::canMakePayment):

LayoutTests:

* http/tests/paymentrequest/payment-request-canmakepayment-method.https-expected.txt:
* http/tests/paymentrequest/payment-request-canmakepayment-method.https.html: Updated with
changes from imported/w3c/web-platform-tests/payment-request/. Modified two tests to use
user_activation_test() rather than test_driver.bless().
* http/tests/paymentrequest/payment-request-show-method.https-expected.txt:
* http/tests/paymentrequest/payment-request-show-method.https.html: Now that canMakePayment
does not convert payment method data, added a test that ensures show() rejects with a
TypeError when Apple Pay's payment method data is invalid.
* platform/ios-wk2/TestExpectations: Un-skipped payment-request-canmakepayment-method.https.html.
* platform/mac-wk2/TestExpectations: Ditto.


Canonical link: https://commits.webkit.org/206256@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238042 268f45cc-cd09-0410-ab3c-d52691b4dbfc